hey captain font added

--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
+/* --------- FONTS -------- */
+@font-face {
+  font-family: "Brandon Text Regular";
+  src: url("fonts/BrandonText-Regular.otf") format("woff");
+}
+
 /* --------- VARIABLES -------- */
 :root {
-  --main-font: "Noto Sans JP";
+  --main-font: "Brandon Text Regular", sans-serif;
   --link-font-size: 14px;
 
   --light-beige: #eff0ea;
@@ -18,7 +24,7 @@
 #bottomNavigation {
   background-color: var(--light-beige);
   margin: 10px;
-  box-shadow:0 2px 10px rgba(226, 225, 225, 0.2); 
+  box-shadow: 0 2px 10px rgba(226, 225, 225, 0.2);
 }
 
 .logo {
@@ -46,65 +52,62 @@
   margin: 10px;
 }
 
-
 input {
-	outline: none;
+  outline: none;
 }
-input[type=search] {
-	font-family: inherit;
-	font-size: 100%;
+input[type="search"] {
+  font-family: inherit;
+  font-size: 100%;
 }
 input::-webkit-search-decoration,
 input::-webkit-search-cancel-button {
-	display: none; 
+  display: none;
 }
 
-
-input[type=search] {
-	background: #ededed url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat 9px center;
-	border: solid 1px #ccc;
-	padding: 9px 10px 9px 32px;
-	border-radius: 10em;
-	transition: all .5s;
+input[type="search"] {
+  background: #ededed
+    url(https://static.tumblr.com/ftv85bp/MIXmud4tx/search-icon.png) no-repeat
+    9px center;
+  border: solid 1px #ccc;
+  padding: 9px 10px 9px 32px;
+  border-radius: 10em;
+  transition: all 0.5s;
 }
-input[type=search]:focus {
-	width: 130px;
-	background-color: #fff;
-	border-color: #66CC75;
-	box-shadow: 0 0 5px rgba(109,207,246,.5);
+input[type="search"]:focus {
+  width: 130px;
+  background-color: #fff;
+  border-color: #66cc75;
+  box-shadow: 0 0 5px rgba(109, 207, 246, 0.5);
 }
-
 
 input:-moz-placeholder {
-	color: #999;
+  color: #999;
 }
 input::-webkit-input-placeholder {
-	color: #999;
+  color: #999;
 }
 
-#searchBar input[type=search] {
-	width: 15px;
-	color: transparent;
-	cursor: pointer;
+#searchBar input[type="search"] {
+  width: 15px;
+  color: transparent;
+  cursor: pointer;
 }
-#searchBar input[type=search]:hover {
-	background-color: #fff;
+#searchBar input[type="search"]:hover {
+  background-color: #fff;
 }
-#searchBar input[type=search]:focus {
-	width: 130px;
-	padding-left: 32px;
-	color: #000;
-	background-color: #fff;
-	cursor: auto;
+#searchBar input[type="search"]:focus {
+  width: 130px;
+  padding-left: 32px;
+  color: #000;
+  background-color: #fff;
+  cursor: auto;
 }
 #searchBar input:-moz-placeholder {
-	color: transparent;
+  color: transparent;
 }
 #searchBar input::-webkit-input-placeholder {
-	color: transparent;
+  color: transparent;
 }
-
-
 
 /* --------- IMAGES -------- */
 .heroImg,
