--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@
   background-color: var(--light-beige);
   margin: 10px;
   box-shadow: 0 2px 10px rgba(226, 225, 225, 0.2);
+  z-index: 9999;
 }
 
 #topNavigation {
@@ -217,7 +218,7 @@ input::-webkit-input-placeholder {
   position: inherit;
   padding: 15px 25px;
   border-radius: 5px;
-  top: 40%;
+  top: 55%;
   width: 180px;
   transform-origin: left 50px;
   transform: rotate(-90deg);
@@ -226,10 +227,12 @@ input::-webkit-input-placeholder {
 .overlay {
   width: 0;
   position: inherit;
-  top: 15%;
-  bottom: 15%;
+  /* top: 95px; */
+  top: 10px;
+  bottom: 0;
   right: 0;
-  background-color: rgba(255, 255, 255, 0.9);
+  /* background-color: rgba(255, 255, 255, 0.9); */
+  background-color: #fff;
   transition: 0.8s;
 }
 
@@ -243,4 +246,56 @@ input::-webkit-input-placeholder {
   width: 100%;
   text-align: center;
   margin-top: 30px;
+}
+
+hr {
+  border: 1px solid lightgray;
+  margin: 140px 50px 20px 50px;
+}
+.bookingSteps h6 {
+  margin: 0 30px;
+  text-transform: uppercase;
+  display: inline-block;
+}
+form,
+.orderOverview,
+.receipt {
+  margin-left: 50px;
+}
+label {
+  font-size: 12px;
+  text-align: left;
+  text-transform: uppercase;
+  display: block;
+  margin: 20px 0 10px 0;
+}
+input,
+select {
+  display: block;
+}
+
+/* booking btns */
+#previous,
+#next {
+  text-transform: uppercase;
+  padding: 10px 30px;
+  background: var(--dark-blue);
+  border: none;
+  border-radius: 3px;
+  color: #fff;
+  cursor: pointer;
+}
+/* #next {
+  margin: 130px 130px 130px 80%;
+} */
+
+.step1,
+.step2,
+.step3,
+.step4,
+.step5 {
+  display: none;
+}
+.availability {
+  margin: 100px 0 0 50px;
 }
