--- a/style.css
+++ b/style.css
@@ -289,12 +289,15 @@ select {
   margin: 130px 130px 130px 80%;
 } */
 
-.step1,
+/* .step1,
 .step2,
 .step3,
 .step4,
 .step5,
 .hide {
+  display: none;
+} */
+.show {
   display: none;
 }
 .availability {
