--- a/style.css
+++ b/style.css
@@ -204,7 +204,7 @@ input::-webkit-input-placeholder {
   margin: 50px;
 }
 .tripImg {
-  width: 250px;
+  width: 300px;
 }
 
 .readMoreTrip {
@@ -217,7 +217,7 @@ input::-webkit-input-placeholder {
 /* trip table */
 #tableHeader {
   display: flex;
-  width: 250px;
+  width: 300px;
   justify-content: space-between;
   color: white;
   background-color: var(--dark-blue);
@@ -528,4 +528,33 @@ p.diana::before {
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
   display: none;
+}
+
+
+/* modal */
+#corona-modal-background,
+#trip-modal-background {
+  display: none;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.showModal{
+  display: block !important;
+}
+
+#corona-modal-content,
+#trip-modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Could be more or less, depending on screen size */
 }
