Form error message on and post to restDb.

--- a/style.css
+++ b/style.css
@@ -475,6 +475,10 @@ p.diana::before {
   color: var(--dark-blue);
   cursor: pointer;
 }
+
+.paymentForm {
+  color: black;
+}
 /* ------------ booking forms ----------- */
 .show {
   display: none;
