--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ body {
   background-color: var(--light-beige);
   margin: 10px;
   box-shadow: 0 2px 10px rgba(226, 225, 225, 0.2);
-  z-index: 999999;
 }
 #topNavigation {
   position: fixed;
@@ -172,6 +171,7 @@ body {
   background-color: white;
   color: var(--dark-blue);
   border: solid 1px var(--dark-blue);
+  cursor: pointer;
 }
 /* trip table */
 #tableHeader {
@@ -288,12 +288,6 @@ body {
 /* COVID */
 #corona {
   padding-top: 50px;
-}
-.coronaText {
-  font-family: "Brandon Text Light";
-  margin: 20px 0;
-  text-align: justify;
-  color: var(--dark-blue);
 }
 
 /* -------- WEATHER ------- */
@@ -489,7 +483,7 @@ p.diana::before {
   display: none;
 }
 #formBox {
-  background: var(--dark-blue);
+  background: var(--light-blue);
   color: white;
   position: absolute;
   top: 74%;
@@ -501,13 +495,14 @@ p.diana::before {
   display: flex;
   text-align: center;
   justify-content: space-between;
-  border: 5px solid rgba(255, 255, 255, 0.5);
+  /* border: 5px solid rgba(255, 255, 255, 0.5); */
 }
 
 .sticky {
   position: fixed;
-  top: 10%;
-  background: var(--dark-blue);
+  top: 0;
+  z-index: 999999;
+  background: var(--light-blue);
 }
 
 .sticky + .content {
@@ -565,9 +560,34 @@ p.diana::before {
 #corona-modal-content,
 #trip-modal-content,
 #payment-modal-content {
-  background-color: #fefefe;
+  background: var(--light-blue);
+  border: none;
+  color: #fff;
+  padding: 50px;
   margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
+  text-align: justify;
+}
+.fullDescription,
+.coronaText {
+  /* font-family: "Brandon Text Light"; */
+  margin-top: 20px;
+  margin: 0 30px;
+}
+.corona-modal-close,
+.trip-modal-close {
+  cursor: pointer;
+  background: inherit;
+  border: none;
+  color: lightgray;
+  float: right;
+  margin-top: -30px;
+}
+.corona-modal-close:hover,
+.corona-modal-close:focus,
+.trip-modal-close:hover,
+.trip-modal-close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
