--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
 #topNavigation {
   position: fixed;
   width: -webkit-fill-available;
+  z-index: 99;
 }
 .logo {
   width: 60px;
@@ -76,17 +77,18 @@ body {
 .banner {
   width: 40%;
   height: auto;
-  /* opacity: 0.4; */
   text-align: center;
   position: absolute;
   top: 35%;
   left: 50%;
   transform: translate(-50%, -50%);
+  z-index: 9999;
 }
 
 .video-container {
   width: 100%;
-  /*   filter: grayscale(10%); */
+  height: 100%;
+  filter: contrast(80%);
 }
 
 /* --------- IMAGES -------- */
@@ -501,7 +503,7 @@ p.diana::before {
   color: var(--light-blue);
 }
 
-/* ------------ booking buttons ----------- */
+/* ------------ buttons ----------- */
 #expandFaq {
   text-transform: uppercase;
   padding: 10px 30px;
@@ -520,6 +522,7 @@ p.diana::before {
   border-radius: 3px;
   color: var(--dark-blue);
   cursor: pointer;
+  background: var(--yellow);
 }
 
 .paymentForm {
@@ -534,7 +537,7 @@ p.diana::before {
   color: white;
   position: absolute;
   top: 74%;
-  z-index: 5;
+  z-index: 999999;
   transition: ease 1s;
 }
 .availability {
