--- a/style.css
+++ b/style.css
@@ -420,28 +420,59 @@ body {
 }
 
 /* NEWSLETTER OVERLAY */
-/* -------- BTN -------- */
 .newsletterArea {
   position: fixed;
 }
 #newsletterBtn {
   background: var(--yellow);
-  border: none;
+  /* border: none;
   cursor: pointer;
   position: inherit;
   padding: 15px 25px;
-  border-radius: 5px;
+  border-radius: 50px;
   top: 55%;
   width: 180px;
   transform-origin: left 50px;
   transform: rotate(-90deg);
   text-transform: uppercase;
+  font-size: 11px; */
+  border: none;
+  cursor: pointer;
+  position: inherit;
+  padding: 30px;
+  top: 45%;
+  transform-origin: left 60px;
+  transform: rotate(-90deg);
+  text-transform: uppercase;
   font-size: 11px;
+  height: 25px;
+  width: 25px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: inline-block;
+}
+.newsletterIcon {
+  height: 35px;
+  width: 35px;
+  transform: rotate(90deg);
+  position: inherit;
+  cursor: pointer;
+  top: 50%;
+  transform-origin: right;
+  left: -3px;
+}
+.newsletterSubscription {
+  padding: 25px 35px;
+  width: 100%;
+}
+.newsletterImg {
+  width: 180px;
+  height: auto;
 }
 .overlay {
   width: 0;
   position: inherit;
-  top: 10px;
+  top: 40%;
   bottom: 0;
   right: 0;
   background-color: #fff;
@@ -449,13 +480,17 @@ body {
 }
 .showOverlay {
   width: 30%;
-  height: 100%;
+  height: 60%;
 }
 .overlay-content {
   position: relative;
-  width: 100%;
   text-align: center;
-  margin-top: 30px;
+  margin-top: 50px;
+  padding: 0 25%;
+}
+.newsletterTitle,
+.newsletterText {
+  margin: 30px 0;
 }
 
 .makeBold {
@@ -475,32 +510,52 @@ body {
 }
 
 label {
-  font-size: 12px;
+  font-size: 11px;
   text-align: left;
   text-transform: uppercase;
   display: block;
-  margin: 20px 0 10px 0;
+  margin: 10px;
+  color: grey;
+  font-family: "Roboto", sans-serif;
+  text-transform: uppercase;
+  font-weight: 800;
 }
 input,
 select {
   display: block;
-  padding: 5px;
-  width: 80%;
-  margin-right: 50px;
+  /* padding: 10px; */
+  /* width: 80%; */
+  margin-top: 10px;
+  border: 1px solid #fff;
+  /* border-radius: 10px; */
+  /* box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15); */
 }
-p.landmarks,
-p.hidden-gems,
-p.diana {
+input:focus,
+select:focus {
+  border: 1px solid #fff;
+}
+.formLabel {
+  border: 1px solid #fff;
+  background: #fff;
+  margin-right: 5px;
+  border-radius: 10px;
+  box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.15);
+}
+
+input#terms {
+  border: none;
+  box-shadow: none;
+}
+.keywords {
   text-align: left;
-  font-size: 14px;
+  font-size: 13px;
   position: absolute;
+  margin-top: 5px;
 }
-p.landmarks::before,
-p.hidden-gems::before,
-p.diana::before {
+.keywords::before {
   content: "ℹ";
   margin-right: 5px;
-  color: var(--light-blue);
+  color: #fff;
 }
 
 /* ------------ buttons ----------- */
@@ -513,13 +568,16 @@ p.diana::before {
   color: #fff;
   cursor: pointer;
 }
-.toPayment {
+.toPayment,
+.newsletterSubscription {
   margin-right: 0;
   text-transform: uppercase;
-  padding: 10px 30px;
+  font-size: 12px;
+  font-weight: 900;
+  padding: 5px 15px;
   background: #fff;
   border: none;
-  border-radius: 3px;
+  border-radius: 10px;
   color: var(--dark-blue);
   cursor: pointer;
   background: var(--yellow);
@@ -534,9 +592,10 @@ p.diana::before {
 }
 #formBox {
   background: var(--light-blue);
+  background: inherit;
   color: white;
   position: absolute;
-  top: 74%;
+  top: 85%;
   z-index: 999999;
   transition: ease 1s;
 }
@@ -545,6 +604,9 @@ p.diana::before {
   display: flex;
   text-align: center;
   justify-content: space-between;
+  background: var(--light-blue);
+  /* border-radius: 10px;
+  border: 1px solid var(--light-blue); */
   /* border: 5px solid rgba(255, 255, 255, 0.5); */
 }
 
@@ -554,7 +616,6 @@ p.diana::before {
   z-index: 999999;
   background: var(--light-blue);
 }
-
 .sticky + .content {
   padding-top: 102px;
 }
