--- a/style.css
+++ b/style.css
@@ -361,9 +361,15 @@ body {
 #bottomNavigation p:nth-of-type(3n) {
   grid-area: desc3;
 }
-#bottomNavigation a {
+#bottomNavigation a:nth-of-type(1n) {
   grid-area: desc3;
   margin-top: 20px;
+}
+#bottomNavigation a:nth-of-type(2n),
+#bottomNavigation a:nth-of-type(3n),
+#bottomNavigation a:nth-of-type(4n) {
+  grid-area: desc4;
+  margin-top: 0;
 }
 #bottomNavigation p {
   font-size: 14px;
